<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:padding="@dimen/dimen_16"
    android:layout_height="match_parent"
    tools:mContext=".Splash">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/dimen_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/cover_image"
                android:src="@drawable/cover"
                android:transitionName="saccoImageTransition"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="4:5"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/open_sans_bold"
            android:textSize="21sp"
            android:maxLines="3"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:text="@string/summary_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_regular"
            android:textSize="15sp"
            android:maxLines="3"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/summary_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:fontFamily="@font/open_sans_semibold"
            android:textAlignment="center"
            android:paddingEnd="20dp"
            android:paddingStart="35dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/primary_background_button"
            android:layout_marginTop="@dimen/dimen_20"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/get_started" />

        <TextView
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/colorWhite"
        app:indicatorName="BallPulseIndicator" />

</RelativeLayout>