<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="8dp"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/cover"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:1"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/cover_image" />

            <TextView
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_bold"
                android:layout_margin="@dimen/dimen_8"
                android:hint="@string/available"
                android:id="@+id/availabilityTextView"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintTop_toTopOf="@id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padd_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:maxLines="1"
                    android:layout_marginEnd="@dimen/padd_10"
                    android:layout_toStartOf="@id/subTextView"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/app_name"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:maxLines="1"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/cUSD"
                    android:id="@+id/subTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <View
                android:layout_marginBottom="@dimen/padd_10"
                android:layout_marginTop="@dimen/padd_10"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/summary_two"
                android:id="@+id/subItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>