<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="8dp"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/cover_image"
                android:src="@drawable/cover"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:1"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/padd_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:maxLines="1"
                    android:layout_marginEnd="@dimen/padd_10"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/app_name"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>


            <SeekBar
                android:layout_marginBottom="@dimen/padd_10"
                android:layout_marginTop="@dimen/padd_10"
                android:progress="50"
                android:max="100"
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/summary_two"
                android:id="@+id/subItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>